// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportsSystems expect to render without error in beta 1`] = `
<Fragment>
  <PageHeader
    className="beta-page-header"
  >
    <PageHeaderTitle
      title="Compliance reports"
    />
    <withRouter(Connect(RouterParams)) />
  </PageHeader>
  <Connect(Main)>
    <Connect(withApollo(SystemsTable))
      columns={
        Array [
          Object {
            "key": "facts.compliance.display_name",
            "props": Object {
              "width": 40,
            },
            "title": "Name",
          },
          Object {
            "key": "facts.compliance.policies",
            "props": Object {
              "width": 40,
            },
            "title": "Policies",
          },
          Object {
            "key": "facts.compliance.compliance_score",
            "props": Object {
              "width": 10,
            },
            "title": "Compliance score",
          },
          Object {
            "key": "facts.compliance.last_scanned",
            "props": Object {
              "width": 10,
            },
            "title": "Scan date",
          },
        ]
      }
      showOnlySystemsWithTestResults={true}
    />
  </Connect(Main)>
</Fragment>
`;

exports[`ReportsSystems expect to render without error in stable 1`] = `
<Fragment>
  <PageHeader
    className="stable-page-header"
  >
    <PageHeaderTitle
      title="Compliance reports"
    />
    <withRouter(Connect(RouterParams)) />
  </PageHeader>
  <Connect(Main)>
    <Connect(withApollo(SystemsTable))
      columns={
        Array [
          Object {
            "key": "facts.compliance.display_name",
            "props": Object {
              "width": 40,
            },
            "title": "Name",
          },
          Object {
            "key": "facts.compliance.policies",
            "props": Object {
              "width": 40,
            },
            "title": "Policies",
          },
          Object {
            "key": "facts.compliance.compliance_score",
            "props": Object {
              "width": 10,
            },
            "title": "Compliance score",
          },
          Object {
            "key": "facts.compliance.last_scanned",
            "props": Object {
              "width": 10,
            },
            "title": "Scan date",
          },
        ]
      }
      showOnlySystemsWithTestResults={true}
    />
  </Connect(Main)>
</Fragment>
`;
